[refactor] DTO request/response 분리 및 record 타입으로 변환