@@ -1,8 +1,8 @@
 package org.farmsystem.homepage.domain.minigame.player.service;
 
 import lombok.RequiredArgsConstructor;
-import org.farmsystem.homepage.domain.minigame.player.dto.BadgeDTO;
-import org.farmsystem.homepage.domain.minigame.player.dto.BadgeDTO.BadgeUpdateRequest;
+import org.farmsystem.homepage.domain.minigame.player.dto.request.BadgeUpdateRequest;
+import org.farmsystem.homepage.domain.minigame.player.dto.response.BadgeResponse;
 import org.farmsystem.homepage.domain.minigame.player.entity.Badge;
 import org.farmsystem.homepage.domain.minigame.player.entity.Player;
 import org.farmsystem.homepage.domain.minigame.player.repository.BadgeRepository;
@@ -13,7 +13,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -23,34 +22,31 @@ public class BadgeService {
     private final PlayerRepository playerRepository;
 
     @Transactional(readOnly = true)
-    public List<BadgeDTO.BadgeResponse> getBadges(Long userId) {
+    public List<BadgeResponse> getBadges(Long userId) {
         Player player = playerRepository.findByUser_UserId(userId)
                 .orElseThrow(() -> new BusinessException(ErrorCode.PLAYER_NOT_FOUND));
 
         return badgeRepository.findByPlayer(player)
                 .stream()
-                .map(badge -> BadgeDTO.BadgeResponse.builder()
-                        .badgeId(badge.getBadgeId())
-                        .badgeType(badge.getBadgeType())
-                        .build())
-                .collect(Collectors.toList());
+                .map(badge -> new BadgeResponse(
+                        badge.getBadgeId(),
+                        badge.getBadgeType()
+                ))
+                .toList();
     }
 
     @Transactional
-    public BadgeDTO.BadgeResponse addBadge(Long userId, BadgeUpdateRequest request) {
+    public BadgeResponse addBadge(Long userId, BadgeUpdateRequest request) {
         Player player = playerRepository.findByUser_UserId(userId)
                 .orElseThrow(() -> new BusinessException(ErrorCode.PLAYER_NOT_FOUND));
 
         Badge badge = Badge.builder()
-                .badgeType(request.getBadgeType())
+                .badgeType(request.badgeType())
                 .player(player)
                 .build();
 
         badgeRepository.save(badge);
 
-        return BadgeDTO.BadgeResponse.builder()
-                .badgeId(badge.getBadgeId())
-                .badgeType(badge.getBadgeType())
-                .build();
+        return new BadgeResponse(badge.getBadgeId(), badge.getBadgeType());
     }
 }
